Fixed places section, added correct grid positioning, added grid for text paragraphs and text alignment from Figma; Adaptivity sufficient for transition from 1280px to 1024px, respective media query to fully match Figma design will be added to complete the transition

--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,6 +3,8 @@
   padding: 0;
   max-width: 484px;
   color: #fff;
+  text-align: left;
+  vertical-align: top;
   font-family: "InterRegular";
   font-size: 18px;
   line-height: 1.63;
