--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -2,4 +2,8 @@
     grid-column-start: 2;
     grid-row-start: 2;
     max-width: 484px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, minmax(min-content, max-content));
+    row-gap: 26px;
 }
