--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,7 @@
 .places {
   max-width: 984px;
-  grid-column: 1/-1;
+  width: 100%;
+  grid-column: 2/3;
   grid-row-start: 4;
   display: grid;
   grid-template-columns: repeat(1, minmax(min-content, max-content));
